# app/Http/Controllers/API/FlowerController.php
@@ -26,14 +26,107 @@ class FlowerController extends Controller
      *          response=200,
      *          description="successful",
      *          @OA\JsonContent()
+     *      ),
+     *      @OA\Parameter( 
+     *          name="_page", 
+     *          in="query",
+     *          description="current page", 
+     *          required=true,
+     *          @OA\Schema(
+     *          type="integer",
+     *          format="int64",
+     *          example=1
      *      )
+     * ),
+     *      @OA\Parameter(
+     *          name="_limit",
+     *          in="query",
+     *          description="max item in a page", 
+     *          required=true,
+     *          @OA\Schema(
+     *          type="integer", 
+     *          format="int64",
+     *          example=10
+     *      )
+     * ),
+     *      @OA\Parameter(
+     *          name="_search",
+     *          in="query",
+     *          description="word to search",
+     *          required=false,
+     *          @OA\Schema(
+     *          type="string",
+     *      )
+     * ),
+     *      @OA\Parameter(
+     *          name="_florist",
+     *          in="query",
+     *          description="search by florist like name",
+     *          required=false, 
+     *          @OA\Schema(
+     *          type="string",
+     *      )
+     * ),
+     *      @OA\Parameter(
+     *          name="_sort_by",
+     *          in="query",
+     *          description="word to search",
+     *          required=false,
+     *          @OA\Schema(
+     *          type="string", 
+     *          example="latest"
+     *          )
+     *      ),
      * )
      */
-    public function index()
+    
+    public function index(Request $request)
     {
-        return Flower::get();
-    }
+        try {
+            $data['filter']     = $request->all();
+            $page               = $data['filter']['_page'] = (@$data['filter']['_page'] ? intval($data['filter']['_page']): 1); 
+            $limit              = $data['filter']['_limit'] = (@$data['filter']['_limit'] ? intval($data['filter']['_limit']) : 1000); 
+            $offset             = ($page?($page-1)*$limit:0);
+            $data['products']   = Flower::whereRaw('1 = 1');
+            
+            if($request->get('_search')){
+                $data['products'] = $data['products']->whereRaw('(LOWER(flowers) LIKE "%'.strtolower($request->get('_search')).'%" OR LOWER (florist) LIKE "%'.strtolower($request->get('_search')).'%")');
+            }
+            if($request->get('_florist')){
+                $data['products'] = $data['products']->whereRaw('LOWER(florist) = "'.strtolower($request->get('_florist')).'"');
+            }
+            if($request->get('_sort_by')){
+            switch ($request->get('_sort_by')) {
+                default:
+                case 'latest_added':
+                $data['products'] = $data['products']->orderBy('created_at','DESC');
+                break;
+                case 'jenis_bunga_asc':
+                $data['products'] = $data['products']->orderBy('jenis_bunga', 'ASC');
+                break;
+                case 'jenis_bunga_desc':
+                $data['products'] = $data["products"]->orderBy('jenis_bunga', 'DESC');
+                break;
+                case 'price_asc':
+                $data['products'] = $data['products']->orderBy('price','ASC');
+                break;
+                case 'price_desc':
+                $data['products'] = $data['products']->orderBy('price','DESC');
+                break;
+            }
+        }
+        $data['products_count_total'] = $data['products']->count();
+        $data['products']             = ($limit==0 && $offset==0)?$data['products']:$data['products']->limit($limit)->offset($offset); 
+        // $data['products_raw_sql']  - $data['products']->tosql();
+        $data['products']             = $data['products']->get();
+        $data['products_count_start'] = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+1);
+        $data['products_count_end']   = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+sizeof($data['products']));
+        return response()->json($data, 200);
 
+    } catch(\Exception $exception) {
+        throw new HttpException(400, "Invalid data: {$exception->getMessage()}");
+    }
+}
     /**
      * @OA\Post(
      *    path="/api/flower",
@@ -58,7 +151,7 @@ class FlowerController extends Controller
      *            example={
      *                "id" : 5,
      *                "jenis_bunga": "Tulip", 
-     *                "florist": "kezia",
+     *                "florist": "IM NAYEON",
      *                "price": 85000, 
      *                "description": "With flower we can know what they want to tell without really speakup",
      *                "image":"https://www.bing.com/th?id=OIP.wlOURUeyYHKMa1xzVmRQxwHaHa&w=206&h=206&c=8&rs=1&qlt=90&o=6&dpr=1.1&pid=3.1&rm=2",
